# terrabridge

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  README.rst
.github/workflows/: python_ci.yaml
docs/source/: conf.py  index.rst
docs/source/aws-resources/: s3_bucket.rst  sqs_queue.rst
docs/source/gcp-resources/: bigquery.rst  bigtable.rst  cloud_sql.rst  cloud_tasks.rst  gcs_bucket.rst  pubsub.rst  pubsub_lite.rst  secret_manager.rst
sdks/python/: README.md  pyproject.toml
sdks/python/.github/workflows/: python_ci.yaml
sdks/python/examples/gcp/bucket/: main.py  main.tf
sdks/python/examples/gcp/mysql/: main.py  main.tf
sdks/python/examples/gcp/postgres/: README.md  main.py  main.tf
sdks/python/examples/gcp/secret_manager/: README.md  main.py  main.tf
sdks/python/examples/gcp/sql_server/: main.py  main.tf
sdks/python/terrabridge/: __init__.py  base.py  parser.py  utils.py
sdks/python/terrabridge/aws/: __init__.py  base.py  rds.py  s3_bucket.py  s3_bucket.pyi  sqs_queue.py  sqs_queue.pyi
sdks/python/terrabridge/gcp/: __init__.py  base.py  bigquery.py  bigtable.py  cloud_sql.py  cloud_sql.pyi  cloud_tasks.py  gcs_bucket.py  gcs_bucket.pyi  pubsub.py  pubsub_lite.py  secret_manager.py
sdks/python/tests/: parser_test.py
sdks/python/tests/aws/: s3_bucket_test.py  sqs_queue_test.py
sdks/python/tests/data/: terraform.tfstate
sdks/python/tests/gcp/: bigquery_test.py  bigtable_test.py  cloud_sql_test.py  cloud_tasks_test.py  gcs_bucket_test.py  pubsub_lite_test.py  pubsub_test.py  secret_manager_test.py
